v2.2.0: java 11 and modules