@@ -11,10 +11,13 @@ allprojects {
 	apply plugin: "maven"
 	apply plugin: "signing"
 	group = "com.github.akurilov"
-	version = "2.1.14"
+	version = "2.2.0"
 }
 
 ext {
+
+	moduleName = "com.github.akurilov.commons"
+
 	provided3rdPartyClasses = [
 		"it/unimi/dsi/fastutil/bytes/ByteIterator.class",
 		"it/unimi/dsi/fastutil/Stack.class",
@@ -94,30 +97,49 @@ configurations {
 }
 
 dependencies {
-	compile("org.apache.commons:commons-collections4:4.1")
-	partial("it.unimi.dsi:fastutil:8.1.1") {
+	compile("org.apache.commons:commons-collections4:4.2")
+	partial("it.unimi.dsi:fastutil:8.2.2") {
 		transitive = false
 	}
 	testCompile("junit:junit:4.12")
 }
 
 compileJava {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs = [
+			'--module-path', classpath.asPath,
+		]
+		classpath = files()
+	}
 }
 
 compileTestJava {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs = [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'junit',
+			'--add-reads', "$moduleName=junit",
+			'--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+		]
+		classpath = files()
+	}
 }
 
 jar {
 	manifest {
 		attributes (
+			"Automatic-Module-Name": moduleName,
 			"Implementation-Version": version,
 			"Implementation-Title": rootProject.name,
 		)
 	}
+	inputs.property("moduleName", moduleName)
 	provided3rdPartyClasses.each {
 		final clsName = it
 		from(configurations.partial.collect { zipTree(it) }) {
@@ -143,6 +165,16 @@ artifacts {
 }
 
 test {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		jvmArgs = [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'ALL-MODULE-PATH',
+			'--add-reads', "$moduleName=junit",
+			'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+		]
+		classpath = files()
+	}
 	jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
 	jvmArgs "-XX:MaxDirectMemorySize=1g"
 	jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
@@ -223,10 +255,6 @@ uploadArchives {
 			}
 		}
 	}
-}
-
-task wrapper(type: Wrapper) {
-	gradleVersion = "4.6"
 }
 
 task printVersion {
